feat: Tweak Lyra popup UI (#768)
## Summary

I want to preface this PR by stating that the proposed changes are
subjective to people's opinions. The following is just my suggestion,
but I'm of course open to changes.

The popups in the currently implemented version of the Lyra theme feel a
bit out of place. This PR suggests an updated version which looks a bit
more polished and in line with the rest of the theme.

I've also taken the liberty to remove the ellipsis behind the text of
the popups, as they made the popup feel a bit off balance (example
below).

With the applied changes, popups will look like this.


![IMG_0012](https://github.com/user-attachments/assets/a954de12-97b8-4102-be17-a702c0fe7d1e)

The vertical position is (more or less) aligned to be in line with the
sleep button. I'm aware the popup is used for other purposes aside from
the sleep message, but this still felt like a good place. It's also a
place where your eyes naturally 'rest'.

The popup has a small 2px white outline, neatly separating it from
whatever is behind it.

### Alternatives considered and rationale behind proposal

Initially I started out worked off the Figma design for the Lyra theme,
which [moves the
popups](https://www.figma.com/design/UhxoV4DgUnfrDQgMPPTXog/Lyra-Theme?node-id=2011-19296&t=Ppj6B2MrFRfUo9YX-1)
to the bottom of the screen. To me, this results in popups that are much
too easy to miss:


![IMG_0006](https://github.com/user-attachments/assets/b8ce3632-94a9-494e-8256-d87a6ee60cdf)

After this, I tried moving the popup back up (to the position of the
sleep button), but to me it still kinda disappeared into the text of the
book:


![IMG_0008](https://github.com/user-attachments/assets/4b05df7c-932e-432b-9c10-130da3109050)

Inverting the colors of the popup made things stand out the perfect
amount in my opinion. The white outline separates the popup from what is
behind it.


![IMG_0011](https://github.com/user-attachments/assets/77b1e8cc-0a57-4f4b-9abb-a9d10988d919)

Th

--- a/lib/I18n/translations/czech.yaml
+++ b/lib/I18n/translations/czech.yaml
@@ -5,7 +5,7 @@ _order: "4"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "SPUŠTĚNÍ"
 STR_SLEEPING: "SPÁNEK"
-STR_ENTERING_SLEEP: "Vstup do režimu spánku..."
+STR_ENTERING_SLEEP: "Vstup do režimu spánku"
 STR_BROWSE_FILES: "Procházet soubory"
 STR_FILE_TRANSFER: "Přenos souborů"
 STR_SETTINGS_TITLE: "Nastavení"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Vybrat kapitolu"
 STR_NO_CHAPTERS: "Žádné kapitoly"
 STR_END_OF_BOOK: "Konec knihy"
 STR_EMPTY_CHAPTER: "Prázdná kapitola"
-STR_INDEXING: "Indexování..."
+STR_INDEXING: "Indexování"
 STR_MEMORY_ERROR: "Chyba paměti"
 STR_PAGE_LOAD_ERROR: "Chyba načítání stránky"
 STR_EMPTY_FILE: "Prázdný soubor"
 STR_OUT_OF_BOUNDS: "Mimo hranice"
 STR_LOADING: "Načítání..."
+STR_LOADING_POPUP: "Načítání"
 STR_LOAD_XTC_FAILED: "Nepodařilo se načíst XTC"
 STR_LOAD_TXT_FAILED: "Nepodařilo se načíst TXT"
 STR_LOAD_EPUB_FAILED: "Nepodařilo se načíst EPUB"
