--- a/lib/I18n/translations/french.yaml
+++ b/lib/I18n/translations/french.yaml
@@ -5,7 +5,7 @@ _order: "2"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "DÉMARRAGE EN COURS"
 STR_SLEEPING: "VEILLE"
-STR_ENTERING_SLEEP: "Mise en veille…"
+STR_ENTERING_SLEEP: "Mise en veille"
 STR_BROWSE_FILES: "Fichiers"
 STR_FILE_TRANSFER: "Transfert"
 STR_SETTINGS_TITLE: "Réglages"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Choix du chapitre"
 STR_NO_CHAPTERS: "Aucun chapitre"
 STR_END_OF_BOOK: "Fin du livre"
 STR_EMPTY_CHAPTER: "Chapitre vide"
-STR_INDEXING: "Indexation en cours…"
+STR_INDEXING: "Indexation en cours"
 STR_MEMORY_ERROR: "Erreur de mémoire"
 STR_PAGE_LOAD_ERROR: "Erreur de chargement"
 STR_EMPTY_FILE: "Fichier vide"
 STR_OUT_OF_BOUNDS: "Dépassement de mémoire"
 STR_LOADING: "Chargement…"
+STR_LOADING_POPUP: "Chargement"
 STR_LOAD_XTC_FAILED: "Erreur de chargement du fichier XTC"
 STR_LOAD_TXT_FAILED: "Erreur de chargement du fichier TXT"
 STR_LOAD_EPUB_FAILED: "Erreur de chargement du fichier EPUB"
