--- a/lib/I18n/translations/german.yaml
+++ b/lib/I18n/translations/german.yaml
@@ -5,7 +5,7 @@ _order: "3"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "STARTEN"
 STR_SLEEPING: "STANDBY"
-STR_ENTERING_SLEEP: "Standby..."
+STR_ENTERING_SLEEP: "Standby"
 STR_BROWSE_FILES: "Durchsuchen"
 STR_FILE_TRANSFER: "Datentransfer"
 STR_SETTINGS_TITLE: "Einstellungen"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Kapitel auswählen"
 STR_NO_CHAPTERS: "Keine Kapitel"
 STR_END_OF_BOOK: "Buchende"
 STR_EMPTY_CHAPTER: "Kapitelende"
-STR_INDEXING: "Indexieren…"
+STR_INDEXING: "Indexieren"
 STR_MEMORY_ERROR: "Speicherfehler"
 STR_PAGE_LOAD_ERROR: "Seitenladefehler"
 STR_EMPTY_FILE: "Leere Datei"
 STR_OUT_OF_BOUNDS: "Zu groß"
 STR_LOADING: "Laden…"
+STR_LOADING_POPUP: "Laden"
 STR_LOAD_XTC_FAILED: "Ladefehler bei XTC"
 STR_LOAD_TXT_FAILED: "Ladefehler bei TXT"
 STR_LOAD_EPUB_FAILED: "Ladefehler bei EPUB"
