--- a/lib/I18n/translations/portuguese.yaml
+++ b/lib/I18n/translations/portuguese.yaml
@@ -5,7 +5,7 @@ _order: "5"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "INICIANDO"
 STR_SLEEPING: "EM REPOUSO"
-STR_ENTERING_SLEEP: "Entrando em repouso..."
+STR_ENTERING_SLEEP: "Entrando em repouso"
 STR_BROWSE_FILES: "Arquivos"
 STR_FILE_TRANSFER: "Transferência"
 STR_SETTINGS_TITLE: "Configurações"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Escolher capítulo"
 STR_NO_CHAPTERS: "Sem capítulos"
 STR_END_OF_BOOK: "Fim do livro"
 STR_EMPTY_CHAPTER: "Capítulo vazio"
-STR_INDEXING: "Indexando..."
+STR_INDEXING: "Indexando"
 STR_MEMORY_ERROR: "Erro de memória"
 STR_PAGE_LOAD_ERROR: "Erro página"
 STR_EMPTY_FILE: "Arquivo vazio"
 STR_OUT_OF_BOUNDS: "Fora dos limites"
 STR_LOADING: "Carregando..."
+STR_LOADING_POPUP: "Carregando"
 STR_LOAD_XTC_FAILED: "Falha ao carregar XTC"
 STR_LOAD_TXT_FAILED: "Falha ao carregar TXT"
 STR_LOAD_EPUB_FAILED: "Falha ao carregar EPUB"
