--- a/lib/I18n/translations/russian.yaml
+++ b/lib/I18n/translations/russian.yaml
@@ -5,7 +5,7 @@ _order: "6"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "Загрузка"
 STR_SLEEPING: "Спящий режим"
-STR_ENTERING_SLEEP: "Переход в сон..."
+STR_ENTERING_SLEEP: "Переход в сон"
 STR_BROWSE_FILES: "Обзор файлов"
 STR_FILE_TRANSFER: "Передача файлов"
 STR_SETTINGS_TITLE: "Настройки"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Выберите главу"
 STR_NO_CHAPTERS: "Глав нет"
 STR_END_OF_BOOK: "Конец книги"
 STR_EMPTY_CHAPTER: "Пустая глава"
-STR_INDEXING: "Индексация..."
+STR_INDEXING: "Индексация"
 STR_MEMORY_ERROR: "Ошибка памяти"
 STR_PAGE_LOAD_ERROR: "Ошибка загрузки страницы"
 STR_EMPTY_FILE: "Пустой файл"
 STR_OUT_OF_BOUNDS: "Выход за пределы"
 STR_LOADING: "Загрузка..."
+STR_LOADING_POPUP: "Загрузка"
 STR_LOAD_XTC_FAILED: "Не удалось загрузить XTC"
 STR_LOAD_TXT_FAILED: "Не удалось загрузить TXT"
 STR_LOAD_EPUB_FAILED: "Не удалось загрузить EPUB"
