--- a/lib/I18n/translations/spanish.yaml
+++ b/lib/I18n/translations/spanish.yaml
@@ -5,7 +5,7 @@ _order: "1"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "BOOTING"
 STR_SLEEPING: "SLEEPING"
-STR_ENTERING_SLEEP: "ENTERING SLEEP..."
+STR_ENTERING_SLEEP: "ENTERING SLEEP"
 STR_BROWSE_FILES: "Buscar archivos"
 STR_FILE_TRANSFER: "Transferencia de archivos"
 STR_SETTINGS_TITLE: "Configuración"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Seleccionar capítulo"
 STR_NO_CHAPTERS: "Sin capítulos"
 STR_END_OF_BOOK: "Fin del libro"
 STR_EMPTY_CHAPTER: "Capítulo vacío"
-STR_INDEXING: "Indexando..."
+STR_INDEXING: "Indexando"
 STR_MEMORY_ERROR: "Error de memoria"
 STR_PAGE_LOAD_ERROR: "Error al cargar la página"
 STR_EMPTY_FILE: "Archivo vacío"
 STR_OUT_OF_BOUNDS: "Out of bounds"
 STR_LOADING: "Cargando..."
+STR_LOADING_POPUP: "Cargando"
 STR_LOAD_XTC_FAILED: "Error al cargar XTC"
 STR_LOAD_TXT_FAILED: "Error al cargar TXT"
 STR_LOAD_EPUB_FAILED: "Error al cargar EPUB"
