--- a/lib/I18n/translations/swedish.yaml
+++ b/lib/I18n/translations/swedish.yaml
@@ -5,7 +5,7 @@ _order: "7"
 STR_CROSSPOINT: "Crosspoint"
 STR_BOOTING: "STARTAR"
 STR_SLEEPING: "VILA"
-STR_ENTERING_SLEEP: "Går i vila…"
+STR_ENTERING_SLEEP: "Går i vila"
 STR_BROWSE_FILES: "Bläddra filer…"
 STR_FILE_TRANSFER: "Filöverföring"
 STR_SETTINGS_TITLE: "Inställningar"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Välj kapitel"
 STR_NO_CHAPTERS: "Inga kapitel"
 STR_END_OF_BOOK: "Slutet på boken"
 STR_EMPTY_CHAPTER: "Tomt kapitel"
-STR_INDEXING: "Indexerar…"
+STR_INDEXING: "Indexerar"
 STR_MEMORY_ERROR: "Minnesfel"
 STR_PAGE_LOAD_ERROR: "Sidladdningsfel"
 STR_EMPTY_FILE: "Tom fil"
 STR_OUT_OF_BOUNDS: "Utanför gränserna"
 STR_LOADING: "Laddar…"
+STR_LOADING_POPUP: "Laddar"
 STR_LOAD_XTC_FAILED: "Misslyckades ladda XTC"
 STR_LOAD_TXT_FAILED: "Misslyckades ladda TCT"
 STR_LOAD_EPUB_FAILED: "Misslyckades ladda EPUB"
