--- a/lib/I18n/translations/english.yaml
+++ b/lib/I18n/translations/english.yaml
@@ -5,7 +5,7 @@ _order: "0"
 STR_CROSSPOINT: "CrossPoint"
 STR_BOOTING: "BOOTING"
 STR_SLEEPING: "SLEEPING"
-STR_ENTERING_SLEEP: "Entering Sleep..."
+STR_ENTERING_SLEEP: "Going to sleep"
 STR_BROWSE_FILES: "Browse Files"
 STR_FILE_TRANSFER: "File Transfer"
 STR_SETTINGS_TITLE: "Settings"
@@ -19,12 +19,13 @@ STR_SELECT_CHAPTER: "Select Chapter"
 STR_NO_CHAPTERS: "No chapters"
 STR_END_OF_BOOK: "End of book"
 STR_EMPTY_CHAPTER: "Empty chapter"
-STR_INDEXING: "Indexing..."
+STR_INDEXING: "Indexing"
 STR_MEMORY_ERROR: "Memory error"
 STR_PAGE_LOAD_ERROR: "Page load error"
 STR_EMPTY_FILE: "Empty file"
 STR_OUT_OF_BOUNDS: "Out of bounds"
 STR_LOADING: "Loading..."
+STR_LOADING_POPUP: "Loading"
 STR_LOAD_XTC_FAILED: "Failed to load XTC"
 STR_LOAD_TXT_FAILED: "Failed to load TXT"
 STR_LOAD_EPUB_FAILED: "Failed to load EPUB"
