feat: Add Polish strings for commits #1219,#1169,#1031 +tweaks (#1227)
## Summary

* **What is the goal of this PR?** Add missing strings and tweaks for
polish language
* **What changes are included?**

## Additional Context

* Add any other information that might be helpful for the reviewer
(e.g., performance implications, potential risks,
  specific areas to focus on).

---

### AI Usage

While CrossPoint doesn't have restrictions on AI tools in contributing,
please be transparent about their usage as it
helps set the right context for reviewers.

Did you use AI tools to help write this code? _**< YES | PARTIALLY | NO
>**_

--- a/lib/I18n/translations/polish.yaml
+++ b/lib/I18n/translations/polish.yaml
@@ -162,9 +162,9 @@ STR_IGNORE: "Ignoruj"
 STR_SLEEP: "Uśpienie"
 STR_PAGE_TURN: "Nast. str."
 STR_PORTRAIT: "Pionowo"
-STR_LANDSCAPE_CW: "Poziomo L"
+STR_LANDSCAPE_CW: "Poziomo P"
 STR_INVERTED: "Odwrócony"
-STR_LANDSCAPE_CCW: "Poziomo P"
+STR_LANDSCAPE_CCW: "Poziomo L"
 STR_FRONT_LAYOUT_BCLR: "Wstecz, Potwierdź, Lewo, Prawo"
 STR_FRONT_LAYOUT_LRBC: "Lewo, Prawo, Wstecz, Potwierdź"
 STR_FRONT_LAYOUT_LBCR: "Lewo, Wstecz, Potwierdź, Prawo"
@@ -226,6 +226,7 @@ STR_EXIT: "« Wyjdź"
 STR_HOME: "« Home"
 STR_SAVE: "« Zapisz"
 STR_SELECT: "Wybierz"
+STR_SELECTED: "Wybrano"
 STR_TOGGLE: "Zmień"
 STR_CONFIRM: "Potwierdź"
 STR_CANCEL: "Anuluj"
@@ -239,7 +240,6 @@ STR_SHOW: "Pokaż"
 STR_HIDE: "Ukryj"
 STR_STATE_ON: "Wł."
 STR_STATE_OFF: "Wył."
-STR_SET: "Ustawiono"
 STR_NOT_SET: "Nie ustawiono"
 STR_DIR_LEFT: "Lewo"
 STR_DIR_RIGHT: "Prawo"
@@ -248,7 +248,6 @@ STR_DIR_DOWN: "Dół"
 STR_CAPS_ON: "CAPS"
 STR_CAPS_OFF: "caps"
 STR_OK_BUTTON: "OK"
-STR_ON_MARKER: "[ON]"
 STR_SLEEP_COVER_FILTER: "Filtr okładek wygaszacza"
 STR_FILTER_CONTRAST: "Kontrast"
 STR_CUSTOMISE_STATUS_BAR: "Dostosowanie paska statusu"
@@ -299,8 +298,8 @@ STR_GO_HOME_BUTTON: "Wróć do głównego ekranu"
 STR_SYNC_PROGRESS: "Postęp synchronizacji"
 STR_DELETE_CACHE: "Usuń pamięć podręczną książek"
 STR_DISPLAY_QR: "Pokaż stronę jako kod QR"
-STR_CHAPTER_PREFIX: "Rozdziały: "
-STR_PAGES_SEPARATOR: " strony  |  "
+STR_CHAPTER_PREFIX: "Rozdział: "
+STR_PAGES_SEPARATOR: " stron  |  "
 STR_BOOK_PREFIX: "Książka: "
 STR_KBD_SHIFT: "shift"
 STR_KBD_SHIFT_CAPS: "SHIFT"
@@ -331,4 +330,9 @@ STR_UPLOAD: "Wyślij"
 STR_BOOK_S_STYLE: "Styl książki"
 STR_EMBEDDED_STYLE: "Style wbudowane w EPUB"
 STR_OPDS_SERVER_URL: "URL serwera OPDS"
+STR_FOOTNOTES: "Przypisy"
+STR_NO_FOOTNOTES: "Brak przypisów na tej stronie"
+STR_LINK: "[link]"
 STR_SCREENSHOT_BUTTON: "Zrób zrzut ekranu"
+STR_AUTO_TURN_ENABLED: "Auto-kartkowanie: "
+STR_AUTO_TURN_PAGES_PER_MIN: "Auto-kartkowanie (str./min)"
